--- a/style.css
+++ b/style.css
@@ -2,9 +2,20 @@ h1 {
     text-align: center;
 }
 
-#charts {
-    margin-left: 20%;
-    margin-right: 20%;
-    width: 60%;
+main {
+    display: flex;
+    flex-flow: row nowrap;
+}
+
+#col-1 {
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+    width: 45%;
+}
+
+#col-2 {
+    width: 45%;
+    margin-right: 2.5%;
+    margin-left: 2.5%;
 }
 
